--- a/style.css
+++ b/style.css
@@ -1,201 +1,46 @@
 *{
-    margin: 0;
+    margin:0;
     padding: 0;
     box-sizing: border-box;
 }
 
 .container{
-   padding: 0 2%; 
-   display: flex;
-   margin: 0 auto;
-   flex-direction: row;
-   align-items: center;
-   justify-content: space-between;
-   
+    width: 100%;
+    padding: 0 2%;
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 12px;
 }
 
 header{
-    width: 100%;
-    height: 60px;
     background-color: black;
-    border-bottom: 3px solid #32b9cd;
-    top: 0;
 }
 
-
-.logo h1{ 
-    color: #32b9cd;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5rem;
-    margin-top: 1rem;
-}
-
-.menu{
-    align-items: center;
-    justify-content: center;
+.logo h1{
+    color: aqua;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .menu ul{
     display: flex;
-    margin-top: .75rem;
-    
+    margin-top: 8px;
+    list-style: none;
 }
 
 .menu li{
-    list-style: none;
-    align-items: center;
-    margin-right: 1rem;
-
+    margin-left: 20px;
 }
 
 .menu a{
     text-decoration: none;
-    color: #efb661;
-    font-size: 18px;
-}
-
-
-.banner{
-    background-image: url(./assets/img/bg-jelly-fish-para_outras_pags.png);
-    padding: 100px 0;
-   
-}
-
-.banner .container{
-    height: 350px;
-    align-items:center;
-    justify-content: center;
-}
-
-.banner .container p{
-    color: white;
-    font-size: 36px;
-    width: 280px;  
-}
-
-.social{
-    margin: 50px 0;
-}
-
-.social .caixas{
-    display: flex;
-    padding: 40px;
-   
-}
-
-.caixa{
-    margin: 0 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.caixa img{
-    width: 170px;
+    color: aqua;
 
 }
 
-.caixa h4{
-    margin: 15px 0;
-    color: #e600a5;
-}
-
-.caixa p{
-    font-size:23px;
-    text-align: center;
+.meu a:hover{
+    color: #fff;
 }
 
 
-.modal-overlay{
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, .5);
-    top:0;
-    left: 0;
-    position: fixed;
-    visibility: visible;
-    display: flex;
-    align-items: center;
-    justify-content: center;   
-    
-}
 
-.modal-overlay .active{
-    opacity: 1;
-    visibility: visible;
-}
-
-
-.modal-overlay-box{
-    width: 500px;
-    height: 400px;
-    padding: 30px 50px;
-    background-color: #f0f2f5;
-}
-
-
-.modal-overlay-box i{
-    float: right;
-    margin-top: 3px;
-    cursor: pointer;
-}
-
-.modal-overlay-box h2{
-    text-align: center;
-    margin-bottom: 12px;
-    padding: 8px 0;
-
-}
-
-.modal-overlay-box form input{
-    display: block;
-    width: 100%;
-    align-items: center;
-    margin-bottom: 12px;
-    padding: 5px 8px;
-    outline: none;
-}
-
-
-.modal-overlay-box form input.onvalid{
-    border: 1px solid red !important;
-}
-
-.modal-overlay-box form a{
-    display: flex;
-    font-size: 15px;
-    font-family: 'roboto';
-    align-items: center;
-    color: black;
-    text-decoration: none;
-}
-
-.modal-overlay-box form button{
-    margin-top: 20px;
-    width: 100%;
-    padding: 6px 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor:pointer;
-    background-color: #32b9cd;
-    border:  0;
-    color: white;
-}
-    
-
-footer{
-    background-color: #32b9cd;
-    padding: 45px 0;
-}
-
-footer .container{
-    justify-content: center;
-}
-
-footer .container p{
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-}
 
