--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -110,6 +110,7 @@ header{
 
 .modal form{
     padding: 1.5rem;
+    text-align: center;
   
 }
 
@@ -133,6 +134,7 @@ header{
     justify-content: center;
     padding: 6px 10px;
     border: none;
+    margin-top:12px;
     background-color: #32b9cd;
     color: white;
     cursor: pointer;
