--- a/css/login.css
+++ b/css/login.css
@@ -129,6 +129,17 @@ header{
     border: 2px solid #32b9cd;
 }
 
+
+.modal form a{
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    color: black;
+    font-weight: 200;
+    margin-bottom: 15px;
+}
+
+
 .modal form button{
     align-items: center;
     justify-content: center;
@@ -138,6 +149,7 @@ header{
     color: white;
     cursor: pointer;
 }
+
 
 .modal form button:hover{
     background-color: #0b5965;
