--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ header{
 }
 
 .banner{
-    background-image: url(assets/img/bg-jelly-fish-para_outras_pags.png);
+    background-image: url(../assets/img/bg-jelly-fish-para_outras_pags.png);
     width: 100%;
     height: 300px;
 }
