--- a/css/style.css
+++ b/css/style.css
@@ -19,29 +19,39 @@ header{
     background-color: black;
 }
 
-.logo h1{
-    color: aqua;
-    font-family: 'Times New Roman', Times, serif;
+.menu{
+    width: 100%;
+    padding:1rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 .menu ul{
     display: flex;
-    margin-top: 8px;
     list-style: none;
 }
 
-.menu li{
-    margin-left: 20px;
+.menu ul li{
+    margin-right: 25px;
 }
 
-.menu a{
-    text-decoration: none;
+.menu ul li a{
     color: aqua;
-
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-style: italic;
 }
 
-.menu a:hover{
+.menu ul li a:hover{
     color: #fff;
+    transition: .6s;
+}
+
+.menu .logo h1{
+    color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
 }
 
 .banner{
