--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,19 @@ header{
     height: 300px;
 }
 
+.banner p{
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 6rem 0;
+    font-size: 30px;
+}
+
+.banner b{
+    margin: 0 10px;
+}
+
 .social{
     width: 100%;
     height: 500px;
