mudança na cor do link de cadastro do  formulário

--- a/css/login.css
+++ b/css/login.css
@@ -134,7 +134,7 @@ header{
     text-align: center;
     text-decoration: none;
     font-size: 15px;
-    color: black;
+    color:#32b9cd;
     font-weight: 200;
     margin-bottom: 15px;
 }
