--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -95,7 +95,7 @@ header{
 }
 
 .modal{
-    background-color: #f2f5f9;
+    background-color: #000;
     padding: 2.5rem;
     align-items: center;
     justify-content: center;
