--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -89,8 +89,12 @@ header{
 
 .modal h3{
     text-align: center;
-    font-size: 1.75rem;
+    font-size: 2rem;
+    font-weight: bold;
+    font-style: italic;
     color: #32b9cd;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .modal form{
